<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <!--<Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/get_data"
            android:layout_weight="4"
            android:id="@+id/get_data" />-->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text="@string/welcome"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/buy_tickets"
            android:layout_weight="1"
            android:id="@+id/buy" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reserve_tickets"
            android:layout_weight="1"
            android:id="@+id/reserve" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:textSize="18sp"
            android:layout_gravity="bottom"
            android:text="@string/footer"/>

    </LinearLayout>

</LinearLayout>
