<?xml version="1.0" encoding="utf-8"?>
<TabHost
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/tab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#CC3333"
                            android:textSize="20sp"
                            android:text="@string/attention"
                            android:id="@+id/textView2" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:text="@string/name_surname"
                                android:layout_weight="4"
                                android:id="@+id/textViewNameSurname" />

                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:id="@+id/valueNameSurname"
                                android:layout_weight="6" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:text="@string/passport"
                                android:layout_weight="4"
                                android:id="@+id/passport" />

                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:inputType="text"
                                android:id="@+id/valuePassport"
                                android:layout_weight="6" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:text="@string/birth_day"
                                android:layout_weight="4"
                                android:id="@+id/birthDay" />

                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/valueBirthDay"
                                android:layout_weight="6" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:text="@string/table"
                                android:layout_weight="4"
                                android:id="@+id/table" />

                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:id="@+id/valueTable"
                                android:layout_weight="6" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:text="@string/cabin"
                                android:layout_weight="4"
                                android:id="@+id/cabin" />

                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:id="@+id/valueCabin"
                                android:layout_weight="6" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:text="@string/travel_date"
                                android:layout_weight="4"
                                android:id="@+id/travel_date" />

                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:id="@+id/valueTravelDate"
                                android:layout_weight="6" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp">

                            <Button
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/next"
                                android:layout_weight="1"
                                android:onClick="nextStep"
                                android:id="@+id/next" />
                        </LinearLayout>

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/tab2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#CC3333"
                    android:textSize="20sp"
                    android:text="@string/attention2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/licence_plates"
                        android:layout_weight="4" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/valueLicencePlates"
                        android:layout_weight="6" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/gouvernment"
                        android:layout_weight="4" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/valueGouvernment"
                        android:layout_weight="6" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/brand"
                        android:layout_weight="4" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/valueBrand"
                        android:layout_weight="6" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/travel_date"
                        android:layout_weight="4"
                        android:id="@+id/travel_date_car" />

                    <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/valueTravelDateCar"
                        android:layout_weight="6" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp">
                    <Button
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:layout_weight="1"
                        android:onClick="finishRegistration"/>
                </LinearLayout>

                </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</TabHost>





    <!--</LinearLayout>-->
